--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,11 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+.idea/.name
+.idea/encodings.xml
+.idea/hemosurvey.iml
+.idea/misc.xml
+.idea/modules.xml
+.idea/workspace.xml
+db.sqlite3
+*.pyc
