--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,5 @@ Temporary Items
 db.sqlite3
 *.pyc
 hemosurvey/secret_settings.py
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/inspectionProfiles/Project_Default.xml
